--- a/Eggcellent/manifest.json
+++ b/Eggcellent/manifest.json
@@ -18,7 +18,7 @@
   "description": "A free search bar to manage your browser. Eggspand your productivity and eggsplore new possibilities.",
   "offline_enabled": true,
   "chrome_url_overrides": {
-    "newtab": "pages/main/index.html"
+    "newtab": "pages/main/newtab.html"
   },
   "commands": {
     "open_search_page": {
