--- a/Eggcellent-WXT/package.json
+++ b/Eggcellent-WXT/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wxt-starter",
-  "description": "manifest.json description",
+  "name": "Eggcellent",
+  "description": "A free search bar to manage your browser. Eggspand your productivity and eggsplore new possibilities.",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "wxt",
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@wxt-dev/module-vue": "^1.0.0",
+    "sass": "^1.77.5",
+    "sass-loader": "^14.2.1",
     "typescript": "^5.4.5",
     "vue-tsc": "^2.0.21",
     "wxt": "^0.18.6"
