--- a/Eggcellent-WXT/package.json
+++ b/Eggcellent-WXT/package.json
@@ -21,6 +21,7 @@
     "@wxt-dev/module-vue": "^1.0.0",
     "sass": "^1.77.5",
     "sass-loader": "^14.2.1",
+    "style-resources-loader": "^1.5.0",
     "typescript": "^5.4.5",
     "vue-tsc": "^2.0.21",
     "wxt": "^0.18.6"
